--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+   <section class="a">
+    <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1><span class="orange-color">Peter Parker</span> Woeld</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's
+            why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a class="button-click" href="https://www.facebook.com/groups/webdevelopmentbatch6" target="_blank">HIRE ME</a>    
+    </div>
     
-git remote add origin https://github.com/SAHADAT-HOSSAIN-12/Personal-Portfolio.git
+    <div class="half-width">
+        <img src="/images/sahadat.png" alt="sahadat" id="my-img">
+    </div>
+   </section>
+
 </body>
 </html>
