add second section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
     </div>
     
     <div class="half-width">
-        <img src="/images/sahadat.png" alt="sahadat" id="my-img">
+        <img src="/images/sahadat.png" alt="sahadat" class="my-img">
+    </div>
+   </section>
+
+   <section class="dream-big">
+    <div class="half-width">
+        <img src="/images/jhankar2.png" alt="jhankar2" class="my-img">
+    </div>
+
+    <div class="sec-2 half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple
+        website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="download-click" href="https://github.com/SAHADAT-HOSSAIN-12/Personal-Portfolio" target="_blank">DOWNLOAD RESUME</a>
     </div>
    </section>
 
