--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-   <section class="a">
+         <!-- ----------------------------------------------------------FIRST SECTION-------------------------------------------------------------- -->
+   <section class="dis-flex">
     <div class="half-width">
         <h1>Welcome to</h1>
-        <h1><span class="orange-color">Peter Parker</span> Woeld</h1>
+        <h1><span class="orange-color">Peter Parker</span> World</h1>
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's
             why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
@@ -25,8 +26,8 @@
         <img src="/images/sahadat.png" alt="sahadat" class="my-img">
     </div>
    </section>
-
-   <section class="dream-big">
+            <!-- -----------------------------------------------------------SECOND SECTION----------------------------------------------------------- -->
+   <section class="dream-big dis-flex">
     <div class="half-width">
         <img src="/images/jhankar2.png" alt="jhankar2" class="my-img">
     </div>
@@ -39,6 +40,33 @@
         <a class="download-click" href="https://github.com/SAHADAT-HOSSAIN-12/Personal-Portfolio" target="_blank">DOWNLOAD RESUME</a>
     </div>
    </section>
+            <!-- --------------------------------------------------------THIRD SECTION-------------------------------------------------------------- -->
+
+    <section>
+        <h2>Experiences</h2>
+        <div id="experiece">
+            <div id="full-stack">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I
+                    didn't
+                    stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the
+                    deployment,
+                    server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web">
+                <h1>Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to
+                    them.
+                    They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section> 
+            <!-- -----------------------------------------------------footer section-----------------------------------------------------        -->
+    <footer>
+        <p id="foot">© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 </html>
