some code changes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
          <!-- ----------------------------------------------------------FIRST SECTION-------------------------------------------------------------- -->
-   <section class="dis-flex">
+   <section class="dis-flex top-banner">
     <div class="half-width">
-        <h1>Welcome to</h1>
+        <h1>Welcome To</h1>
         <h1><span class="orange-color">Peter Parker</span> World</h1>
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's
@@ -23,13 +23,13 @@
     </div>
     
     <div class="half-width">
-        <img src="/images/sahadat.png" alt="sahadat" class="my-img">
+        <img src="images/sahadat.png" alt="sahadat" class="my-img">
     </div>
    </section>
             <!-- -----------------------------------------------------------SECOND SECTION----------------------------------------------------------- -->
    <section class="dream-big dis-flex">
     <div class="half-width">
-        <img src="/images/jhankar2.png" alt="jhankar2" class="my-img">
+        <img src="images/jhankar2.png" alt="jhankar2" class="my-img">
     </div>
 
     <div class="sec-2 half-width">
